--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,9 +13,18 @@
     "@types/node": "^12.20.25",
     "@types/react": "^17.0.21",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.9",
+    "@types/react-syntax-highlighter": "^13.5.2",
+    "install": "^0.13.0",
+    "npm": "^7.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.4",
+    "remark-breaks": "^3.0.1",
+    "remark-gfm": "^2.0.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
