--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
     "@types/react-router-dom": "^5.1.9",
     "@types/react-syntax-highlighter": "^13.5.2",
     "install": "^0.13.0",
+    "mathjax-full": "^3.2.0",
+    "mathjax-react": "^1.0.6",
     "npm": "^7.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
+    "react-mathjax": "^1.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.4",
+    "rehype-katex": "^6.0.1",
+    "rehype-mathjax": "^4.0.1",
     "remark-breaks": "^3.0.1",
     "remark-gfm": "^2.0.0",
+    "remark-math": "^5.1.0",
+    "remark-sub-super": "^1.0.20",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
