--- a/package.json
+++ b/package.json
@@ -4,35 +4,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@innodoc/react-mathjax-node": "^0.1.2",
-    "@mui/material": "^5.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.25",
-    "@types/react": "^17.0.21",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.9",
+    "@mui/material": "^5.2.6",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.5",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "@types/react-syntax-highlighter": "^13.5.2",
     "immutability-helper": "^3.1.1",
     "install": "^0.13.0",
     "mathjax-full": "^3.2.0",
     "mathjax-react": "^1.0.6",
-    "npm": "^7.24.0",
+    "npm": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.0.1",
+    "react-markdown": "^7.1.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
-    "react-syntax-highlighter": "^15.4.4",
-    "rehype-katex": "^6.0.1",
-    "remark-breaks": "^3.0.1",
-    "remark-gfm": "^2.0.0",
-    "typescript": "^4.4.3",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "^5.0.0",
+    "react-syntax-highlighter": "^15.4.5",
+    "rehype-katex": "^6.0.2",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "typescript": "^4.5.4",
+    "web-vitals": "^2.1.2",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "scripts": {
     "predeploy": "npm run build",
